--- a/style.css
+++ b/style.css
@@ -53,18 +53,29 @@ header{
 }
 section{
     float: left;
-    width: 60%;
+    width: 65%;
     margin-top: 1em;
+    border-style: solid;
+    border-width: 0.1em;
+    margin-left: 0em;
 }
 aside{
      float: right;
-     width: 40%;
+     width: 34%;
      height: 100%;
      position: static;
+     border-style: solid;
+    border-width: 0.1em;
      
 }
 article{
 float: left;
-width: 60%;
+width: 65%;
+background-color: #3498db;
+border-style: solid;
+    border-width: 0.1em;
+}
+video{
+     width: 35%;
 
 }
