--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
      font-family: Arial, sans-serif;
      margin: 0;
      padding: 0;
+     background-image: linear-gradient(to right, blue , aquamarine);
+
 }
 
 .container {
@@ -13,9 +15,10 @@ body {
 
 /* Estilos del navbar */
 .navbar {
-     background-color: #3498db;
+     background-image: linear-gradient(to right, blue , aquamarine);
      color: #fff;
      padding: 10px 0;
+     border-bottom: 1px solid yellow;
 }
 
 .navbar .logo {
@@ -46,25 +49,46 @@ body {
 .nav-links a:hover {
      border-bottom: 2px solid #fff;
 }
-header{
-     background-color: #3498db;
+
+header {
+     
+     background-image: linear-gradient(to right, blue , aquamarine);
      text-align: center;
-     
-}
-section{
-    float: left;
-    width: 60%;
-    margin-top: 1em;
-}
-aside{
-     float: right;
-     width: 40%;
-     height: 100%;
-     position: static;
-     
-}
-article{
-float: left;
-width: 60%;
 
 }
+
+section {
+     padding: 5px;
+     margin-left: 20px;
+     float: left;
+     width: 65%;
+     margin-top: 1em;
+}
+
+aside {
+     float: right;
+     width: 25%;
+     height: 100%;
+     position: static;
+   
+
+}
+
+article {
+     padding: 5px;
+     margin-top: 20px;
+     float: left;
+     width: 65%;
+     margin-left: 20px;
+}
+
+video {
+     margin-left: 20px;
+     margin-top: 20px;
+     width: 35%;
+
+}
+#rectangulos {
+     margin: 20px auto;
+     display: block;
+   }
